--- a/css/card.css
+++ b/css/card.css
@@ -31,6 +31,12 @@
     border: 1px solid black;
 }
 
+
+#stopwatch{
+    font-size: 30px;
+    font-weight: bold;
+}
+
 .img:hover{
     opacity: 30%;
 }
