--- a/css/commom.css
+++ b/css/commom.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    align-items: center;
     /* background-color: skyblue; */
 }
 
@@ -16,6 +17,12 @@ h1 {
     font-size: 40px;
     font-weight: bold; 
     text-align: center;
+}
+
+.home{
+    width: 60px; height: 60px;
+    margin: 25px;
+    float: left;
 }
 
 .body {
