--- a/css/timer.css
+++ b/css/timer.css
@@ -14,3 +14,15 @@
     font-size: 60px;
     font-weight: bold;
 }
+
+.s_button{
+    width: 120px; height: 45px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px;
+    margin: 30px 10px 0 0;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: pink;
+}
