--- a/css/commom.css
+++ b/css/commom.css
@@ -1,5 +1,5 @@
 .header {
-    width: 600px; height: 100px;
+    width: 100%; height: 100px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -20,13 +20,13 @@ h1 {
 }
 
 .home{
-    width: 60px; height: 60px;
+    width: 60px ;height: 60px;
     margin: 25px;
     float: left;
 }
 
 .body {
-    width: 600px; height: 550px;
+    width: 100%; height: 550px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -36,7 +36,7 @@ h1 {
 }
 
 .footer {
-    width: 600px; height: 100px;
+    width: 100%; height: 100px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
