--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,8 @@ img {
     transition: transform 0.5s;
     border-radius: 15%;
 }
+
+.home_login{
+    width: 50px ;height: 50px;
+    float: right;
+}
